# up2_rmd_control

./: CMakeLists.txt  README.md  package.xml
include/: Common.h  dynamics.h  motor_controller.h  motor_controller_new.h
launch/: rmd_motor_control.launch
src/: dynamics.cpp  main.cpp  motor_controller.cpp  motor_controller_new.cpp  rmd_can.cpp  rmd_motor.cpp  spi2can.cpp
